# 1brc-challenge

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  vcpkg.json
.devcontainer/: Dockerfile-ubuntu  devcontainer.json  onCreateCommand.sh
conan/profiles/: linux-x86-gcc13-release
example/: CMakeLists.txt  app1.cpp  app2.cpp  frederic.cpp  said-multithread-1.cpp
src/: CMakeLists.txt
src/include/project/: 1brc.hpp  project.hpp
test/: CMakeLists.txt
test/unit_test/: doom_test.cpp
